feat: sponsors removed for now

--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@ content="DevJams,DevStack,DevTalks,Hackathons,VIT,Vellore,Devfest,Developer Stud
 
 
     <!-- sponsers -->
-    <div class="page-section" id="sponsers">
+    <!-- <div class="page-section" id="sponsers">
         <div class="sponserheading">
             Past sponsors
         </div>
@@ -339,7 +339,7 @@ content="DevJams,DevStack,DevTalks,Hackathons,VIT,Vellore,Devfest,Developer Stud
               <button data-aos="fade-up" data-aos-duration="200" data-aos-anchor-placement="bottom-bottom">Download Brochure</button>
           </div>
           
-    </div>
+    </div> -->
     <div class="page-section" id="contactus">
         <div class="contactusheading">
             Contact Us
