feat: added new logo

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ content="DevJams,DevStack,DevTalks,Hackathons,VIT,Vellore,Devfest,Developer Stud
         <div class="col" id="lefter">
           <div class="devjams4">
             <h1>
-              <img src="./Assets/devstack1.png" alt="" class="devtext" data-aos="fade-up" data-aos-duration="100">
+              <img src="./Assets/Text.png" alt="" class="devtext" data-aos="fade-up" data-aos-duration="100">
             </h1>
             <h3 class="opendev" id="demo">
                 
