--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@ content="DevJams,DevStack,DevTalks,Hackathons,VIT,Vellore,Devfest,Developer Stud
             <!-- <li data-aos="fade-up" data-aos-duration="900" data-aos-anchor-placement="bottom-bottom" ><a href="#timeline"  class="link">Timeline</a></li> -->
             <!-- <li data-aos="fade-up" data-aos-duration="1000" data-aos-anchor-placement="bottom-bottom" ><a href="#sponsers"  class="link">Sponsors</a></li> -->
             <li data-aos="fade-up" data-aos-duration="1100" data-aos-anchor-placement="bottom-bottom" ><a href="#contactus" class="link">Contact Us</a></li> 
-            <li data-aos="fade-up" data-aos-duration="1100" data-aos-anchor-placement="bottom-bottom" ><a href="https://dsc.community.dev/vellore-institute-of-technology" target="_blank" class="link">Join Us</a></li> 
-            <!-- <li data-aos="fade-up" data-aos-duration="1100" data-aos-anchor-placement="bottom-bottom" ><a href="#faq" class="navigation__link">FAQs</a></li>  -->
+            <!-- <li data-aos="fade-up" data-aos-duration="1100" data-aos-anchor-placement="bottom-bottom" ><a href="https://dsc.community.dev/vellore-institute-of-technology" target="_blank" class="link">Join Us</a></li>  -->
+            <li data-aos="fade-up" data-aos-duration="1100" data-aos-anchor-placement="bottom-bottom" ><a href="#faq" class="navigation__link">FAQs</a></li> 
         </ul>
     </nav>
     <script>
