--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@ content="DevJams,DevStack,DevTalks,Hackathons,VIT,Vellore,Devfest,Developer Stud
               <div class="row">
                 <div class="col-sm">
                   <div class="devjams1">
-                      <h1 data-aos="fade-up" data-aos-duration="100">DevJams</h1>
+                      <h1 data-aos="fade-up" data-aos-duration="100">DevJams'21</h1>
                       <h5 style="text-align: justify;text-justify: inter-word;">
                         DevJams is one of a kind hackathon conducted by Developer Student Clubs VIT every year to encourage tech enthusiasts from across the country to develop their ideas for the future. The hackathon focuses on providing students and upcoming entrepreneurs with a platform to develop, compete, network and present their ideas to solve real-world problems. We have been successfully conducting DevJams (previously known as Devfest) for 5 years now. DevJams’20 will be the sixth edition through which we hope to bring innovative minds from all around the country under one banner.
                       </h5>
@@ -406,13 +406,20 @@ content="DevJams,DevStack,DevTalks,Hackathons,VIT,Vellore,Devfest,Developer Stud
           </div>
           <div class="row" id="accord">
             <div class="col-12 col-md-8">
-              <button class="accordion" style="outline: none; margin:4px;">What is DevStack?
+              <!-- <button class="accordion" style="outline: none; margin:4px;">What is DevStack?
               </button>
               <div class="panel" style="margin-left:4px;">
                 <p style="padding:15px 15px;">DevStack is an annual event organized and hosted by DSC VIT. The philosophy behind this event is to promote budding developers and designers to enhance their skills under the mentorship of industry experts and professionals. Under its canopy, DevStack features two equally awesome events: DevJams and DevTalks.
                 </p>
-              </div>
+              </div> -->
 
+              
+
+              <button class="accordion" style="outline: none; margin:4px;">What is DevJams?
+              </button>
+              <div class="panel" style="margin-left:4px;">
+                <p style="padding:15px 15px;">DevJams is an annual 36-hour long hackathon, that aims to bring together great developers and designers under one roof and pitting them against each other in a healthy competition. Under focussed mentorship from a dedicated and experienced technical team, and an equally challenging and innovative panel of themes, participants can test their skills and use them to build projects to solve real-world problems.</p>
+              </div>
               <button class="accordion" style="outline: none; margin:4px;">What is DevTalks?
               </button>
               <div class="panel" style="margin-left:4px;">
@@ -420,11 +427,6 @@ content="DevJams,DevStack,DevTalks,Hackathons,VIT,Vellore,Devfest,Developer Stud
                   .</p>
               </div>
 
-              <button class="accordion" style="outline: none; margin:4px;">What is DevJams?
-              </button>
-              <div class="panel" style="margin-left:4px;">
-                <p style="padding:15px 15px;">DevJams is an annual 36-hour long hackathon, that aims to bring together great developers and designers under one roof and pitting them against each other in a healthy competition. Under focussed mentorship from a dedicated and experienced technical team, and an equally challenging and innovative panel of themes, participants can test their skills and use them to build projects to solve real-world problems.</p>
-              </div>
               <button class="accordion" style="outline: none; margin:4px;">How can I register for DevTalks?
               </button>
               <div class="panel" style="margin-left:4px;">
