--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ content="DevJams,DevStack,DevTalks,Hackathons,VIT,Vellore,Devfest,Developer Stud
     </nav>
     <script>
       var i = 0;
-      var txt = '...........Push code pop prizes!';
+      var txt = '..........Push code pop prizes!';
       var speed = 50;
       
       function typeWriter() {
